--- a/index.html
+++ b/index.html
@@ -295,6 +295,6 @@
 </div>
 <!-- Principal conteneur END -->
     
-
+<script src="//rum-static.pingdom.net/pa-63453ae3405b1d001100144f.js" async></script>
 </body>
 </html>
